Bug 122970 - Direct cursor leaves screen trail with mouse pointer movement and no text
Summary: Direct cursor leaves screen trail with mouse pointer movement and no text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.1.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Hossein
URL:
Whiteboard: target:24.2.0
Keywords: needsUXEval, possibleRegression
Depends on:
Blocks: 38844 Direct-Cursor
  Show dependency treegraph
 
Reported: 2019-01-25 14:26 UTC by John
Modified: 2023-08-17 15:38 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (99.85 KB, image/png)
2019-01-25 14:29 UTC, John
Details
OpenGL info (689.87 KB, image/png)
2019-02-07 21:46 UTC, John
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John 2019-01-25 14:26:36 UTC
Description:
Open new Writer document. Move mouse pointer across blank page. No text applied. Pointer leaves a trail with every movement. Unchecking direct cursor solves problem but leaves me with no direct cursor. Only happens in Writer in Linux Mint 19.1 x64, not the Windows version. Doesn't happen with Impress Didn't happen with previous version of LO Writer and same operating system.

Steps to Reproduce:
1.Open new Writer document. Leave blank.
2.Move mouse pointer.
3.Pointer leaves a trail of artefacts with each pointer movement.
Disabling direct cursor solves the problem but leaves user without direct cursor.

Actual Results:
Direct cursor leaves artefacts. Turning it off solves the problem but not a useful solution.

Expected Results:
Direct cursor should work as designed. It did in LO 6.1 but hasn't in 6.2.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 John 2019-01-25 14:29:15 UTC
Created attachment 148659 [details]
Screenshot
Comment 2 Roman Kuznetsov 2019-01-27 07:34:41 UTC
Johm, may be you just have active option "Formatting marks"? Try to disable it
Comment 3 John 2019-01-27 14:53:24 UTC
Hi Roman: no, it's not related to "formatting marks" - I tried that already. As I mentioned in my bug report it's related to the Direct Cursor. When I uncheck that in Writer|Options|Formatting Aids the problem goes away. When I recheck it the problem returns. Only occurs in Writer, not Impress.
Comment 4 Xisco Faulí 2019-02-07 20:26:39 UTC
Does it work if you disable OpenGl ? -> https://wiki.documentfoundation.org/OpenGL

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 5 John 2019-02-07 21:46:30 UTC
Created attachment 148999 [details]
OpenGL info
Comment 6 Xisco Faulí 2019-03-21 10:46:30 UTC
Hi John,
You didn't answer my question. Disable the openGl and retest please
Comment 7 John 2019-03-22 14:17:57 UTC
Hi: restarted LO 6.2.2 Linux Mint 19.1 x64 in Safe Mode which I assume turns off OpenGL. Fixed the problem but LO ran noticeably slower. I have an Nvidia card and I gather this can be an issue with OpenGL ATM. So far the fix is to uncheck Direct Cursor but that doesn't work in Safe Mode anyway.

Using OpenCL in normal mode doesn't resolve the problem. Seems like it's video card related.
Comment 8 Xisco Faulí 2019-04-12 10:52:37 UTC
Could you please provide the opengl info as described here -> https://wiki.documentfoundation.org/OpenGL
Comment 9 John 2019-04-12 12:34:26 UTC
OpenGL info added

glxinfo | grep OpenGL
OpenGL vendor string: NVIDIA Corporation
OpenGL renderer string: GeForce GT 710/PCIe/SSE2
OpenGL core profile version string: 4.6.0 NVIDIA 390.116
OpenGL core profile shading language version string: 4.60 NVIDIA
OpenGL core profile context flags: (none)
OpenGL core profile profile mask: core profile
OpenGL core profile extensions:
OpenGL version string: 4.6.0 NVIDIA 390.116
OpenGL shading language version string: 4.60 NVIDIA
OpenGL context flags: (none)
OpenGL profile mask: (none)
OpenGL extensions:
OpenGL ES profile version string: OpenGL ES 3.2 NVIDIA 390.116
OpenGL ES profile shading language version string: OpenGL ES GLSL ES 3.20
OpenGL ES profile extensions:

Hope this helps.
Comment 10 Dieter 2019-10-14 11:22:48 UTC
Hello John, a new major release of LibreOffice is available since this bug was reported. Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 11 John 2019-10-14 15:57:02 UTC
The problem persists making direct cursor unusable. Now using 6.3.3.1 in Mint 19.2 64 bit. Same Nvidia 710 card. Everything else remains unchanged.

Seems fine in Windows 10_64 laptop using Intel i7 and video card.
Comment 12 Dieter 2020-04-14 07:48:47 UTC
(In reply to John from comment #7)
> Hi: restarted LO 6.2.2 Linux Mint 19.1 x64 in Safe Mode which I assume turns
> off OpenGL. Fixed the problem but LO ran noticeably slower.

You can also disable OpenGL with Tools => Options => LibreOffice => View => Graphics Output. Perhaps this is also a solution or at least a workaround.
Comment 13 Dieter 2020-04-14 07:50:15 UTC
(In reply to John from comment #9)
> OpenGL info added

> Hope this helps.

Xisco, you've asked for OpenGL Infos. Are they helpful or is any additional info needed?
Comment 14 Buovjaga 2020-06-19 13:59:15 UTC
(In reply to Dieter from comment #12)
> (In reply to John from comment #7)
> > Hi: restarted LO 6.2.2 Linux Mint 19.1 x64 in Safe Mode which I assume turns
> > off OpenGL. Fixed the problem but LO ran noticeably slower.
> 
> You can also disable OpenGL with Tools => Options => LibreOffice => View =>
> Graphics Output. Perhaps this is also a solution or at least a workaround.

I highly doubt John was using OpenGL UI rendering on Linux. Would be very surprised if this was the case.

(In reply to John from comment #0)
> Steps to Reproduce:
> 1.Open new Writer document. Leave blank.
> 2.Move mouse pointer.
> 3.Pointer leaves a trail of artefacts with each pointer movement.
> Disabling direct cursor solves the problem but leaves user without direct
> cursor.

Adding step 0:
Tools - Options - Writer - Formatting aids - Direct cursor
Comment 15 Doug 2020-11-07 17:41:23 UTC
Hi, I would like to add that I am experiencing this problem as well. I am using 

LibreOffice 7.0.0.3
Mac OS X 10.11
Intel CPU

I think it was also showing up for the previous version of LibreOffice I was using; it was triggering some memory about why I stopped using LibreOffice... But it has been quite a while since I've used LibreOffice so I do not know what version that was.

Turning off Direct Cursor seems to have stopped this from occurring.

It also was happening on pages with text, so I do not think a blank page is essential for this bug to show up. The marks would actually go away if I directed the mouse properly - and others then show up, so some sort of problem in the screen redrawing, perhaps.
Comment 16 Buovjaga 2020-11-07 18:14:51 UTC
Setting to NEW per last comment
Comment 17 QA Administrators 2022-11-08 03:47:29 UTC Comment hidden (obsolete)
Comment 18 Hossein 2023-06-07 09:00:40 UTC
The issue is still reproducible with the latest LO 7.6 dev master:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 52f70f04bdc586a072141e069d451a979c5f4cb7
CPU threads: 20; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: CL threaded

The problem is caused by the way the direct cursor pointer (shadow pointer) is rendered using XOR:

sw/source/uibase/utlui/shdwcrsr.cxx
https://opengrok.libreoffice.org/xref/core/sw/source/uibase/utlui/shdwcrsr.cxx?r=f72bb33e#74
SwShadowCursor::DrawCursor

The problem with XOR rendering is discussed in tdf#38844:

Bug 38844 - Reduce XOR rendering (search RasterOp::Xor)
https://bugs.documentfoundation.org/show_bug.cgi?id=38844
Comment 19 Heiko Tietze 2023-06-15 13:06:40 UTC
Rizal, can you create a nice cursor image for this?

See also https://gerrit.libreoffice.org/c/core/+/153099
Comment 20 Commit Notification 2023-06-19 23:04:17 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f9f7cfc080c3adb751ceca96be4ca5440de4a2b6

tdf#122970 Fix direct cursor leaving screen trail

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Rizal Muttaqin 2023-07-19 11:58:11 UTC
(In reply to Heiko Tietze from comment #19)
> Rizal, can you create a nice cursor image for this?
> 
> See also https://gerrit.libreoffice.org/c/core/+/153099

How it should looks?
Comment 22 Hossein 2023-07-19 12:01:05 UTC
(In reply to Rizal Muttaqin from comment #21)
> (In reply to Heiko Tietze from comment #19)
> > Rizal, can you create a nice cursor image for this?
> > 
> > See also https://gerrit.libreoffice.org/c/core/+/153099
> 
> How it should looks?
I have described the shape in this issue:
Bug 155943 - Three New pointer shapes for direct cursor mode
https://bugs.documentfoundation.org/show_bug.cgi?id=155943

And instead of 3 cursors, even 2 with the exact same look of the current direct cursor on 7.5 (or before that) is fine for now. They can be seen in attachment 188007 [details].