sw/source/uibase/inc/edtwin.hxx
@@ -93,6 +93,7 @@ class SW_DLLPUBLIC SwEditWin final : public vcl::DocWindow,
     std::unique_ptr<SdrDropMarkerOverlay> m_pUserMarker;
     SdrObject               *m_pUserMarkerObj;
     std::unique_ptr<SwShadowCursor, o3tl::default_delete<SwShadowCursor>> m_pShadCursor;
+    sal_Int16 m_eOrient;
     std::optional<Point>                m_xRowColumnSelectionStart; // save position where table row/column selection has been started
 
     SwView         &m_rView;
